logs/corunner.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/corunner'...
Compiling './lib/python3.5/site-packages/corunner/FileTransporter.py'...
***   File "./lib/python3.5/site-packages/corunner/FileTransporter.py", line 99
    print "Usage: %s -n [nodes] -s [sourceFile] -d [targetDir] -o|-i <--divide>"
                                                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/corunner/TaskController.py'...
***   File "./lib/python3.5/site-packages/corunner/TaskController.py", line 153
    print "Usage: %s -n [nodes] <-f [programFile]> <-r [nodeRootDir]> <-i [reportInterval]> command" % sys.argv[0]
                                                                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/corunner/TaskExecutor.py'...
***   File "./lib/python3.5/site-packages/corunner/TaskExecutor.py", line 197
    print "Spawn command [%s]" % " ".join(command)
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/corunner/common'...
Compiling './lib/python3.5/site-packages/corunner/common/ShellUtil.py'...
***   File "./lib/python3.5/site-packages/corunner/common/ShellUtil.py", line 53
    print line,
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/corunner/conf'...
Listing './lib/python3.5/site-packages/corunner-1.0.7.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
